                 (ServerConfiguration) Classe (inizializzata globalmente come 'config') per leggere la configurazione del server.
                                       Non e' tollerante: se un qualsiasi attributo o tipo di valore sono errati la configurazione viene ripristinata al default
                 (DEFAULT_ATTRIBUTES) Questo e' un dizionario contenente i default della configurazione delle cartelle (Simile ad .htaccess ma (forse) piu' esteso)
                                      Ad ogni chiave corrisponde una lista di due elementi: rispettivamente tipo e valore di default
                 (FileConfiguration) Contiene la configurazione cartella
                 (.*) Spostati qui tutti i metodi relativi alla generazione di header HTTP(S)
                 (Compressor) Fornisce una classe per la compressione DEFLATE + il calcolo di dimesione e crc32
                 (get_gzip) Crea uno stream GZip tramite Compressor, ritornato on-the-fly come stringa (Con header e crc32)
    * config.py: ATTENZIONEH! Questo file non e' piu' la configurazione del server! Modifica la variabile CONFIG_FILE in main.py per designare un file di configurazione personalizzato
                 Nel caso in cui:
                    - il file di configurazione non sia presente
                    - la configurazione sia buggata (bacata, corrotta, chiamala come ti pare ;)
                    - si verifichi un attacco alieno
                 il file di configurazione verra' ingorato e verranno applicati questi standard (o comunque vengono applicati dalla riga di errore in poi)

    Seconda release su github.com (https://github.com/FabioMene/PyServer)
2014-07-03
    Aggiunto file multistream.py al progetto (Permette di mappare piu' stream ad un solo oggetto stream)
    * main.py: Aggiunto supporto a stream multipli
    * pyml.py: Aggiunto supporto a stream multipli
    Sistemato bug dello streaming contemporaneo (su github -> issues)