@@ -134,20 +134,24 @@ lfiles_validity       Validità della cache dei file dalla creazione (o aggiorna
 
 
 Sezione "misc"
-index_search_order   La lista indica l'ordine di ricerca del file di index
-                     quando un client richiede una pagina tipo http(s)://indirizzoserver/ o
-                     http(s)://indirizzoserver/cartelle/altre_cartelle/
-                     Se nessun file viene trovato viene inviato un errore 404
-                     [[".pyml", ".pyhtml", ".html", ".htm"]] (è una lista!)
-                     
-{chroot_after_load}  Se impostato a True, una volta completato il caricamento dei server il programma
-                     esegue un chroot su WEBDISK_PATH in modo da aumentare la sicurezza.
-                     Richiede i privilegi di amministratore/root
-                     Linux/Unix: Cambia anche i permessi dell'utente a daemon dopo
-                                 chroot e dopo aver modificato
-                                 ad a+rwx i permessi di paths.webdisk
-                                 Prima della chiusura del programma vengono reimpostati i permessi
-                     [False]
+index_search_order    La lista indica l'ordine di ricerca del file di index
+                      quando un client richiede una pagina tipo http(s)://indirizzoserver/ o
+                      http(s)://indirizzoserver/cartelle/altre_cartelle/
+                      Se nessun file viene trovato viene inviato un errore 404
+                      [[".pyml", ".pyhtml", ".html", ".htm"]] (è una lista!)
+                      
+server_error_template La stringa indica un file da cui verrà estratto il template di errore del client/server
+                      Il file è un html standard, dove '%errnum' e '%errdesc' vengono rispettivamente sostituite
+                      con il codice errore HTTP e una breve stringa di descrizione
+                      
+{chroot_after_load}   Se impostato a True, una volta completato il caricamento dei server il programma
+                      esegue un chroot su WEBDISK_PATH in modo da aumentare la sicurezza.
+                      Richiede i privilegi di amministratore/root
+                      Linux/Unix: Cambia anche i permessi dell'utente a daemon dopo
+                                  chroot e dopo aver modificato
+                                  ad a+rwx i permessi di paths.webdisk
+                                  Prima della chiusura del programma vengono reimpostati i permessi
+                      [False]
 
 
 Sezione "http"
